create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2529,6 +2529,32 @@ section.lazy-placeholder:after {
 .cid-qTkzRZLJNu .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
+.cid-rGDThIloTm .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-rGDThIloTm .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-rGDThIloTm .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-rGDThIloTm .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-rGDThIloTm .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
   background: #333333;
@@ -3298,6 +3324,11 @@ section.lazy-placeholder:after {
 .cid-qTkzRZLJNu .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
+.cid-rGDSgybqjR {
+  padding-top: 120px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
   background: #333333;
@@ -3679,6 +3710,258 @@ section.lazy-placeholder:after {
 .cid-qTkzRZLJNu .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
+.cid-rGDA4K3dVQ {
+  padding-top: 90px;
+  padding-bottom: 0px;
+  background-image: url("../../../assets/images/fire-2-1052x700.jpeg");
+}
+.cid-rGDzXj1Zg7 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rGDzXj1Zg7 .counter-container {
+  color: #767676;
+}
+.cid-rGDzXj1Zg7 .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-rGDzXj1Zg7 .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-rGDzXj1Zg7 .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+}
+.cid-rGDzXj1Zg7 .counter-container ol li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.cid-rGDIlIKYPu {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-image: url("../../../assets/images/malte-wingen-re4koqzkig4-unsplash-2000x3000.jpeg");
+}
+.cid-rGDImHj6bI {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rGDImHj6bI .counter-container {
+  color: #767676;
+}
+.cid-rGDImHj6bI .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-rGDImHj6bI .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-rGDImHj6bI .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+}
+.cid-rGDImHj6bI .counter-container ol li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.cid-rGDAy8DvW6 {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-image: url("../../../assets/images/pexels-photo-41135-1880x1253.jpg");
+}
+.cid-rGDAyFcyzd {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rGDAyFcyzd .counter-container {
+  color: #767676;
+}
+.cid-rGDAyFcyzd .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-rGDAyFcyzd .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-rGDAyFcyzd .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+}
+.cid-rGDAyFcyzd .counter-container ol li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.cid-rGDAAe1Ewt {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-image: url("../../../assets/images/showcase-65306-1920-1920x1434.jpg");
+}
+.cid-rGDAAe1Ewt H2 {
+  color: #ffffff;
+}
+.cid-rGDABj2AEv {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rGDABj2AEv .counter-container {
+  color: #767676;
+}
+.cid-rGDABj2AEv .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-rGDABj2AEv .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-rGDABj2AEv .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+}
+.cid-rGDABj2AEv .counter-container ol li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.cid-rGDACygUEx {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-image: url("../../../assets/images/photo-1518181835702-6eef8b4b2113-1050x700.jpg");
+}
+.cid-rGDACygUEx H2 {
+  color: #232323;
+}
+.cid-rGDADMlGJ3 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rGDADMlGJ3 .counter-container {
+  color: #767676;
+}
+.cid-rGDADMlGJ3 .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-rGDADMlGJ3 .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-rGDADMlGJ3 .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+}
+.cid-rGDADMlGJ3 .counter-container ol li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.cid-rGDOrqAs52 {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-image: url("../../../assets/images/smoke-2592482-1920-1920x1034.jpg");
+}
+.cid-rGDOuHIAJM {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rGDOuHIAJM .counter-container {
+  color: #767676;
+}
+.cid-rGDOuHIAJM .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-rGDOuHIAJM .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-rGDOuHIAJM .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+}
+.cid-rGDOuHIAJM .counter-container ol li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
   background: #333333;
@@ -4059,6 +4342,78 @@ section.lazy-placeholder:after {
 .cid-qTkzRZLJNu .nav-link:hover,
 .cid-qTkzRZLJNu .dropdown-item:hover {
   color: #c1c1c1 !important;
+}
+.cid-rGDSxkVaLT {
+  padding-top: 120px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rGDSxkVaLT h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rGDSxkVaLT p {
+  color: #767676;
+  text-align: left;
+  margin-bottom: 0;
+}
+.cid-rGDSxkVaLT .card-img {
+  width: auto;
+}
+.cid-rGDSxkVaLT .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+.cid-rGDSxkVaLT .card-box {
+  padding-left: 1rem;
+  word-break: break-word;
+}
+@media (max-width: 991px) {
+  .cid-rGDSxkVaLT .card-img {
+    text-align: left;
+    padding-bottom: 0.75rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rGDSxkVaLT .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rGDSxJBwe1 {
+  padding-top: 0px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rGDSxJBwe1 h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rGDSxJBwe1 p {
+  color: #767676;
+  text-align: left;
+  margin-bottom: 0;
+}
+.cid-rGDSxJBwe1 .card-img {
+  width: auto;
+}
+.cid-rGDSxJBwe1 .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+.cid-rGDSxJBwe1 .card-box {
+  padding-left: 1rem;
+  word-break: break-word;
+}
+@media (max-width: 991px) {
+  .cid-rGDSxJBwe1 .card-img {
+    text-align: left;
+    padding-bottom: 0.75rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rGDSxJBwe1 .card-img span {
+    font-size: 40px !important;
+  }
 }
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
