--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7,12 +7,12 @@ form{
     
     width: 450px;
     margin: auto;
-    background-color: indianred;
+    background-color: green;
     padding: 10px 20px;
     box-sizing: border-box;
     margin-top: 40px;
     border-radius: 7px;
-    margin-bottom: 800px;
+    margin-bottom: 40px;
 }
 
 #boton3 {
