--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7,7 +7,7 @@ form{
     
     width: 450px;
     margin: auto;
-    background-color: green;
+    background-color: #81E319;
     padding: 10px 20px;
     box-sizing: border-box;
     margin-top: 40px;
