--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -10,9 +10,9 @@ form{
     background-color: #81E319;
     padding: 10px 20px;
     box-sizing: border-box;
-    margin-top: 40px;
+    margin-top: 100px;
     border-radius: 7px;
-    margin-bottom: 40px;
+    margin-bottom: 100px;
 }
 
 #boton3 {
@@ -29,6 +29,13 @@ form{
     
 }
 
+#menu222{
+    
+    margin-top: 200px;
+    margin-bottom:200px;
+    background-color: red;
+
+}
 
 
 
