--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -42,12 +42,24 @@ form{
     
  margin-top: 50px;
  margin-bottom: 30px;
-    
-    
-    
-    
+      
 }
 
+.caja{
+    
+font-family: sans-serif;
+font-size: 18px;
+font-weight: 400;
+color: #ffffff;
+background: #889ccf;
+margin: 0 0 25px;
+overflow: hidden;
+padding: 20px;  
+    
+    
+    
+    
+}    
 
 
 
