--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -55,6 +55,8 @@ background: #889ccf;
 margin: 0 0 25px;
 overflow: hidden;
 padding: 20px;  
+margin-top: 10px;
+margin-bottom: 10px;    
     
     
     
