--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -13,6 +13,7 @@ form{
     margin-top: 20px;
     border-radius: 7px;
     margin-bottom: 20px;
+    font-family: 'Francois One', sans-serif;
 }
 
 #boton3 {
@@ -24,6 +25,7 @@ form{
     box-sizing: border-box;
     font-size: 17px;
     background-color: darkcyan
+    font-family: 'Francois One', sans-serif;    
     
     
     
@@ -34,6 +36,7 @@ form{
     margin-top: 20px;
     margin-bottom:20px;
     background-color: red;
+    font-family: 'Francois One', sans-serif;
 
 }
 
@@ -56,7 +59,8 @@ margin: 0 0 25px;
 overflow: hidden;
 padding: 20px;  
 margin-top: 10px;
-margin-bottom: 10px;    
+margin-bottom: 10px;   
+font-family: 'Francois One', sans-serif;    
     
     
     
