--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -24,7 +24,7 @@ form{
     padding: 7px;
     box-sizing: border-box;
     font-size: 17px;
-    background-color: darkcyan
+    background-color: darkcyan;
     font-family: 'Francois One', sans-serif;    
     
     
