--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -67,6 +67,22 @@ font-family: 'Francois One', sans-serif;
     
 }    
 
+#mapa555{
+    
+ margin-top: 100px;
+ margin-bottom: 100px;   
+   
+    
+    
+    
+    
+    
+    
+    
+    
+    
+}
+
 
 
 body {
