--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Francois+One:400&display=swap);
 
 #main-header {
-	background: #333;
+	background: white;
 	color: white;
 	height: 80px;
 	
