--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,4 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Francois+One:400&display=swap);
+#aeamano{
+	
+margin-top: 100px;
+margin-bottom: 100px;	
+	}
+
+
+
 
 #main-header {
 	background: white;
