--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -71,7 +71,7 @@ font-family: sans-serif;
 font-size: 18px;
 font-weight: 400;
 color: #ffffff;
-background: #889ccf;
+background: red;
 margin: 0 0 25px;
 overflow: hidden;
 padding: 20px;  
