--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,5 +1,108 @@
 @import url(https://fonts.googleapis.com/css?family=Francois+One:400&display=swap);
 
+#aeamano{
+	
+margin-top: 100px;
+margin-bottom: 100px;	
+	}
+
+
+
+
+#main-header {
+	background: white;
+	color: white;
+	height: 80px;
+	
+	width: 100%; /* hacemos que la cabecera ocupe el ancho completo de la página */
+	left: 0; /* Posicionamos la cabecera al lado izquierdo */
+	top: 0; /* Posicionamos la cabecera pegada arriba */
+	position: fixed; /* Hacemos que la cabecera tenga una posición fija */
+}
+
+form{
+    
+    
+    width: 450px;
+    margin: auto;
+    background-color: white;
+    padding: 10px 20px;
+    box-sizing: border-box;
+    margin-top: 20px;
+    border-radius: 7px;
+    margin-bottom: 20px;
+    font-family: 'Francois One', sans-serif;
+}
+
+#boton3 {
+    
+    width: 100%;
+    margin-top: 70px;
+    margin-bottom: 20px;
+    padding: 7px;
+    box-sizing: border-box;
+    font-size: 17px;
+    background-color: darkcyan;
+    font-family: 'Francois One', sans-serif;    
+    
+    
+    
+}
+
+#menu222{
+    
+    margin-top: 20px;
+    margin-bottom:20px;
+    background-color: red;
+    font-family: 'Francois One', sans-serif;
+
+}
+
+
+#h234{
+    
+ margin-top: 60px;
+ margin-bottom: 40px;
+      
+}
+
+.caja{
+    
+font-family: sans-serif;
+font-size: 18px;
+font-weight: 400;
+color: #ffffff;
+background: #E7745C;
+margin: 0 0 25px;
+overflow: hidden;
+padding: 20px;  
+margin-top: 10px;
+margin-bottom: 10px;   
+font-family: 'Francois One', sans-serif;    
+    
+    
+    
+    
+}    
+
+#mapa555{
+    
+ margin-top: 100px;
+ margin-bottom: 100px;   
+   
+    
+    
+    
+    
+    
+    
+    
+    
+    
+}
+
+
+
 
 
 
